--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ panic-halt = "0.2.0"
 ufmt = "0.1.0"
 nb = "0.1.2"
 embedded-hal = "0.2.3"
+derive_more = "0.99.17"
+micromath = "2.0.0"
 
 [dependencies.arduino-hal]
 git = "https://github.com/rahix/avr-hal"
